# gochat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/: public.h
include/client/: global.h  login_menu.h  main_menu.h
include/server/: ChatServer.h  ChatService.h  FriendModel.h  OfflineMsgModel.h  User.hpp  UserModel.h
include/server/database/: Database.h  UserModel.h
include/server/model/: Group.hpp  GroupModel.h  GroupUser.hpp  User.hpp  UserModel.h
include/server/redis/: redis.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  login_menu.cpp  main.cpp  main_menu.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  FriendModel.cpp  UserMode.cpp  UserModel.cpp  main.cpp
src/server/database/: Database.cpp
src/server/model/: GroupModel.cpp  OfflineMsgModel.cpp
src/server/redis/: redis.cpp
